# ProcGen

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/shaders/: skybox_frag.glsl  skybox_vert.glsl  terrain_frag.glsl  tree_frag.glsl  tree_vert.glsl  vert.glsl  water_frag.glsl  water_vert.glsl
src/: Camera.cpp  Camera.h  Light.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  Tree.cpp  Tree.h  Water.cpp  Water.h  glHelper.h  main.cpp  mesh.cpp  mesh.h
